# dspy-learning-lab

./: .env.example  .flake8  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
datasets/sample_data/: classification.json  classification.jsonl  classification_test.json  classification_train.json  dataset_summary.json  dspy_math_examples.json  dspy_qa_examples.json  dspy_sentiment_examples.json  math.json  math.jsonl  math_test.json  math_train.json  qa.json  qa.jsonl  qa_test.json  qa_train.json  sentiment.json  sentiment.jsonl  sentiment_test.json  sentiment_train.json  summarization.json  summarization.jsonl  summarization_test.json  summarization_train.json
docs/: 01_motivation.md  02_core_concepts.md  03_installation.md  README.md
examples/advanced/: gepa_optimization.py  parallel_execution.py  pydantic_validation.py
examples/basic/: hello_world.py  math_qa.py  summarizer.py
examples/infrastructure/: prometheus.yml  prometheus_metrics.py
examples/personas/: legal_lucy.py  support_sam.py
scripts/: evaluate_all.py  prepare_datasets.py  setup.py
src/dspy_0to1_guide/: __init__.py
src/dspy_0to1_guide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic_examples.py  test_datasets.py  test_scripts.py
